@@ -87,6 +87,16 @@ get.shortest.paths <- function(graph, from, mode="all") {
         PACKAGE="igraph")
 }
 
+get.all.shortest.paths <- function(graph, from, mode="all") {
+  if (is.character(mode)) {
+    mode <- switch(mode, "out"=1, "in"=2, "all"=3)
+  }
+
+  .Call("R_igraph_get_all_shortest_paths", graph,
+        as.numeric(from), as.numeric(mode),
+        PACKAGE="igraph")
+}
+
 subcomponent <- function(graph, v, mode="all") {
   if (is.character(mode)) {
     mode <- switch(mode, "out"=1, "in"=2, "all"=3)
